<resources>
    <string name="app_name">Smart Garden</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_telp">Telepon</string>
    <string name="hint_server">Server</string>

    <string name="err_msg_name">Enter your username</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_telp">Enter your phone</string>
    <string name="err_msg_server">Enter your server ip</string>
</resources>
